追加：画面追加

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -4,8 +4,7 @@
 
 /* 全体を囲うコンテナー */
 .container {
-  width: 100%;
-  height: 100vh;
+  height: 400px;
   background-color: #15151e;
   display: flex;
   align-items: center;
@@ -40,4 +39,33 @@
   .clock-time {
     font-size: 20vw;
   }
+}
+
+div#content {
+background-color: #99cc33;
+width: 760px;
+overflow: hidden;
+}
+
+div#main {
+}
+
+nav {
+color: #339933;
+background-color: #99cc33;
+width: 144px;
+float: left;
+}
+.styled {
+    border: 0;
+    line-height: 2.5;
+    padding: 0 20px;
+    font-size: 1rem;
+    text-align: center;
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
+    border-radius: 10px;
+    background-color: rgba(220, 0, 0, 1);
+    background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
 }
